[tool.poetry]
name = "yuntech"
version = "0.1.0"
description = ""
authors = ["phillychi3 <phillychi3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "*"
matplotlib = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.14"
transformers = "^4.41.2"
datasets = "^2.20.0"
pyttsx3 = "^2.90"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
