[tool.poetry]
name = "yuntech"
version = "0.1.0"
description = ""
authors = ["phillychi3 <phillychi3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.4"
tk = "*"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
